5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1846_1278.log
== TEST (2019-06-24 19:09:43) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
e=int(input())
l=(e%10)-1
c=(s%10)-1
x=0
while (e!=-1):
	x=x+m[l,c]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:19:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
while (e!=-1 and s!=-1):
	e=int(input())
	s=int(input())
	l=(e%10)-1
	c=(s%10)-1
	x=x+m[l,c]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:20:17) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	e=int(input())
	s=int(input())
	x=x+m[l,c]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:20:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	e=int(input())
	s=int(input())
	x=x+tempo[l,c]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:23:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:24:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- EXECUTION TIME:
1.04004
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
22
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
30
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:24:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:24:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- EXECUTION TIME:
0.864098
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
22
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
22
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
30
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:24:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- EXECUTION TIME:
2.2969
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
22
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
30
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:24:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- EXECUTION TIME:
3.77136
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
29
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
30
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:24:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- EXECUTION TIME:
5.29945
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
30
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:

-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:25:01) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- EXECUTION TIME:
1.27596
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
22
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
30
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:25:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- EXECUTION TIME:
1.10845
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
22
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
30
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:25:26) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- EXECUTION TIME:
1.54379
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
22
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
30
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:25:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- EXECUTION TIME:
3.05184
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
22
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
30
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:25:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- EXECUTION TIME:
5.5013
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
30
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
30
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:25:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- EXECUTION TIME:
7.74215
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
30
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
30
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:25:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- EXECUTION TIME:
8.69835
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
30
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
30
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:25:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- EXECUTION TIME:
9.48147
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
30
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
29
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:25:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- EXECUTION TIME:
2.88765
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
22
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
30
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:25:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- EXECUTION TIME:
2.06914
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1846/1278/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:25:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- EXECUTION TIME:
0.733077
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
22
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
30
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:26:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:26:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:26:54) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input())
s=int(input())
l=(e%10)-1
c=(s%10)-1
while (s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input())
print(x)
-- EXECUTION TIME:
1.20706
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
22
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
30
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:29:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input("Cidade: "))
s=int(input("Cidade: "))
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input("Cidade: "))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:29:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input("Cidade: "))
s=int(input("Cidade: "))
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	x=x+tempo[l,c]
	d=s
	s=int(input("Cidade: "))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:32:59) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input("Cidade: "))
s=int(input("Cidade: "))
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	soma=soma+tempo[l,c]
	d=e
	e=int(input("Cidade: "))
print(soma)
-- EXECUTION TIME:
1.19131
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1278/main.py", line 13, in <module>
    soma=soma+tempo[l,c]
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:32:59) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
e=int(input("Cidade: "))
s=int(input("Cidade: "))
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(e%10)-1
	c=(s%10)-1
	soma=soma+tempo[l,c]
	d=e
	e=int(input("Cidade: "))
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:35:14) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
saida=int(input("Informe a saída: "))
destino=int(input("Informe o destino: "))
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(saida%10)-1
	c=(destino%10)-1
	soma=soma+tempo[l,c]
	saida=destino
	destino=int(input("Informe o destino: "))
print(soma)
-- EXECUTION TIME:
1.18664
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1278/main.py", line 9, in <module>
    c=(s%10)-1
NameError: name 's' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:35:15) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
saida=int(input("Informe a saída: "))
destino=int(input("Informe o destino: "))
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(saida%10)-1
	c=(destino%10)-1
	soma=soma+tempo[l,c]
	saida=destino
	destino=int(input("Informe o destino: "))
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:35:26) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
saida=int(input("Informe a saida: "))
destino=int(input("Informe o destino: "))
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(saida%10)-1
	c=(destino%10)-1
	soma=soma+tempo[l,c]
	saida=destino
	destino=int(input("Informe o destino: "))
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:35:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
saida=int(input("Informe a saida: "))
destino=int(input("Informe o destino: "))
l=(e%10)-1
c=(s%10)-1
while (e!=-1 and s!=-1):
	l=(saida%10)-1
	c=(destino%10)-1
	soma=soma+tempo[l,c]
	saida=destino
	destino=int(input("Informe o destino: "))
print(soma)
-- EXECUTION TIME:
1.18475
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1278/main.py", line 9, in <module>
    c=(s%10)-1
NameError: name 's' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:35:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
saida=int(input("Informe a saida: "))
destino=int(input("Informe o destino: "))
l=(saida%10)-1
c=(destino%10)-1
while (e!=-1 and s!=-1):
	l=(saida%10)-1
	c=(destino%10)-1
	soma=soma+tempo[l,c]
	saida=destino
	destino=int(input("Informe o destino: "))
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:35:50) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
saida=int(input("Informe a saida: "))
destino=int(input("Informe o destino: "))
l=(saida%10)-1
c=(destino%10)-1
while (e!=-1 and s!=-1):
	l=(saida%10)-1
	c=(destino%10)-1
	soma=soma+tempo[l,c]
	saida=destino
	destino=int(input("Informe o destino: "))
print(soma)
-- EXECUTION TIME:
1.20922
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1278/main.py", line 10, in <module>
    while (e!=-1 and s!=-1):
NameError: name 's' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:36:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
saida=int(input("Informe a saida: "))
destino=int(input("Informe o destino: "))
l=(saida%10)-1
c=(destino%10)-1
while (saida!=-1 and destino!=-1):
	l=(saida%10)-1
	c=(destino%10)-1
	soma=soma+tempo[l,c]
	saida=destino
	destino=int(input("Informe o destino: "))
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:36:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x=0
saida=int(input("Informe a saida: "))
destino=int(input("Informe o destino: "))
l=(saida%10)-1
c=(destino%10)-1
while (saida!=-1 and destino!=-1):
	l=(saida%10)-1
	c=(destino%10)-1
	soma=soma+tempo[l,c]
	saida=destino
	destino=int(input("Informe o destino: "))
print(soma)
-- EXECUTION TIME:
1.05635
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1278/main.py", line 13, in <module>
    soma=soma+tempo[l,c]
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:36:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
soma=0
saida=int(input("Informe a saida: "))
destino=int(input("Informe o destino: "))
l=(saida%10)-1
c=(destino%10)-1
while (saida!=-1 and destino!=-1):
	l=(saida%10)-1
	c=(destino%10)-1
	soma=soma+tempo[l,c]
	saida=destino
	destino=int(input("Informe o destino: "))
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:36:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
soma=0
saida=int(input("Informe a saida: "))
destino=int(input("Informe o destino: "))
l=(saida%10)-1
c=(destino%10)-1
while (saida!=-1 and destino!=-1):
	l=(saida%10)-1
	c=(destino%10)-1
	soma=soma+tempo[l,c]
	saida=destino
	destino=int(input("Informe o destino: "))
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:36:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
soma=0
saida=int(input("Informe a saida: "))
destino=int(input("Informe o destino: "))
l=(saida%10)-1
c=(destino%10)-1
while (saida!=-1 and destino!=-1):
	l=(saida%10)-1
	c=(destino%10)-1
	soma=soma+tempo[l,c]
	saida=destino
	destino=int(input("Informe o destino: "))
print(soma)
-- EXECUTION TIME:
1.08241
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
